[package]
name = "amazon-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
range = { git = "https://github.com/kano1101/range.git" }
thirtyfour = "0.28.0"
tokio = "1.15.0"
