[package]
name = "amazon-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.19"
range = { git = "https://github.com/kano1101/range.git" }
regex = "1.5.4"
thirtyfour = "0.28.0"
tokio = "1.15.0"
